Fix image on mobile

--- a/assets/styles/modules/_product_card.sass
+++ b/assets/styles/modules/_product_card.sass
@@ -13,8 +13,6 @@
     max-width: 400px
     overflow: hidden
     img
-      height: 100%
-      width: auto
       transition: transform 250ms linear
   &-name
     text-transform: uppercase
